Pod_communication_network_policy/pod.yaml
apiVersion: v1

kind: Pod

metadata:
  name: aap
  namespace: 22102024ns

spec:
  containers:
  - name: nginx-pod
    image: nginx:latest
  
    ports:
    - containerPort: 80
