Pod_communication_network_policy/networkpolicy.yaml
apiVersion: networking.k8s.io/v1

kind: NetworkPolicy

metadata:
  name: mynetworkpolicy
  namespace: 22102024ns

spec:
  podSelector:
    matchLabels:
      application: netflix
